--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   go_router: ^4.4.1
   flutter_bloc: ^8.1.1
   provider: ^6.0.3
+  dynamic_themes: ^1.1.0
+  get_storage: ^2.0.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
