--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          flutter format  .
+          flutter format --set-exit-if-changed .
           flutter analyze
           flutter test test/data test/integration_test test/ui
           flutter build web
