--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^4.4.1
+  go_router: ^5.0.5
   flutter_bloc: ^8.1.1
   provider: ^6.0.3
   dynamic_themes: ^1.1.0
   get_storage: ^2.0.3
   get: ^4.6.5
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
+  json_serializable: ^6.2.0
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
