feat(Object): add entities

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
   cloud_firestore: ^3.5.1
+  mason: ^0.1.0-dev.34
 
 dev_dependencies:
   flutter_test:
