--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_database: ^10.0.7
   cloud_firestore: ^4.1.0
   firebase_core_platform_interface: ^4.5.2
+  get_storage: ^2.0.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
