--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,17 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+analyzer:
+  exclude:
+    - lib/**/*.g.dart
+    - lib/**/*.freezed.dart
+    - lib/localUrl.dart
+    - lib/generated_plugin_registrant.dart
+    - test/**/*.mocks.dart
+  errors:
+    constant_identifier_names: ignore
+    sized_box_for_whitespace: ignore
+    unsafe_html: ignore
 
 linter:
   # The lint rules applied to this project can be customized in the
