feat(game): save socre in firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core_platform_interface: ^4.5.2
   get_storage: ^2.0.3
   get: ^4.6.5
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
