--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,7 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
+  pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '10.3.0'
   use_frameworks!
   use_modular_headers!
 
@@ -39,3 +40,4 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
