--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   get_storage: ^2.0.3
   get: ^4.6.5
   html_unescape: ^2.0.0
+  path_provider: ^2.0.11
+  image_picker: ^0.8.6
+  flutter_launcher_icons:
+    version: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/trivial-pursuit-logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -77,9 +86,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/trivial-pursuit-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
