--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,20 @@ dependencies:
   dio: ^4.0.6
   flutter_bloc: ^8.1.1
   swiping_card_deck: ^1.2.0
+
+  # Firebase
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
-  firebase_database: ^10.0.7
-  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.0.10
+  cloud_firestore: ^4.3.1
   firebase_core_platform_interface: ^4.5.2
+
+
   get_storage: ^2.0.3
   get: ^4.6.5
   html_unescape: ^2.0.0
+
+  #PHOTO
   path_provider: ^2.0.11
   image_picker: ^0.8.6
   flutter_launcher_icons:
@@ -69,10 +75,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
 
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/images/trivial-pursuit-logo.png"
+#flutter_icons:
+#  android: true
+#  ios: true
+#  image_path: "assets/images/trivial-pursuit-logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
