--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,6 @@ dependencies:
   html_unescape: ^2.0.0
 
   #PHOTO
-  path_provider: ^2.0.11
   image_picker: ^0.8.6
   flutter_launcher_icons:
     version: ^0.11.0
@@ -94,6 +93,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/trivial-pursuit-logo.png
+   - assets/images/user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
