--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,23 @@ dependencies:
   dio: ^4.0.6
   flutter_bloc: ^8.1.1
   swiping_card_deck: ^1.2.0
+
+  # Firebase
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
-  firebase_database: ^10.0.7
-  cloud_firestore: ^4.1.0
+  firebase_storage: ^11.0.10
+  cloud_firestore: ^4.3.1
   firebase_core_platform_interface: ^4.5.2
+
+
   get_storage: ^2.0.3
   get: ^4.6.5
   html_unescape: ^2.0.0
+
+  #PHOTO
+  image_picker: ^0.8.6
+  flutter_launcher_icons:
+    version: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +74,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
 
+#flutter_icons:
+#  android: true
+#  ios: true
+#  image_path: "assets/images/trivial-pursuit-logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -77,9 +91,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/trivial-pursuit-logo.png
+   - assets/images/user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
